# Notes

./: .gitignore  404.html  AH_protocol.md  AUDitd.md  Algorithms.canvas  AppArmor.md  Archive vs Compress.md  Automatic Mounting fstab.md  Automation tools.canvas  Block vs character dev.md  Block_dev.md  Boot procces.md  CORS.md  CUPS.md  Cloud models.md  Combining Disks (raid).canvas  Commands_filesSytem.md  Contorl_Plane_kubenretes.md  DAC.md  DHCP_config.md  DMA.md  DNS_Records.md  Dick encryption.md  Digital certificate.md  Docker Netwroks.canvas  Dockerfile  FCoE.md  FQDN.md  Go_chanels.md  Golang AWS_issue.md  HTTPS.md  Hash.md  ICMP_protocol.md  IO schedulers.md  IPSec_protocol.md  Jenkins.md  Kubernetes.md  LDAP.md  LVM.md  Latex_syntax.md  (+88 more)
Algorithms/: Binary Search Tree.md  Linked List.md  binary search.md  queue_algorithms.md  quick sort.md  recursion.md  ring buffer.md  set.md  stack_algorithms.md  traversals.md  trees_algorithms.md
Jurnal/: 2023-05-05.md  2023-05-15.md
LINUX/: sar.md  sudo.md
Linux/: dd.md  env.md  kill.md  nmap.md  renice.md  service.md  spoof.md  tar.md  top.md
MAIN Linux/: dev_dir.md
MAIN Network+/: Network types.md  OSI Model.md  Wireless topologies.md  ethool.md
Metasploit Framework/: payloads-options_metasploit.md  payloads_metasploit.md
POSTS/: The price of abstraction.md  ansible_post.md  dont_break_easy_preserve_best_version_of_your_sytsem.md  its_just_body.md  the_world_doesn_t_end_with_scripting.md
PROGRAMMING/: zig.md
Penetration/: NIDS.md  iwconfig.md  lo.md
SQL/: Aggregates.md  Baisic structure of a SQL.md  (+7 more)
(+3104 files in other folders)
